# omnimarble

./: .gitignore  README.md  launch_kit_app.bat  magnetic-coil-marble-coaster-digital-twin.md  omnimarble.kit.bat  pyproject.toml
config/: coil_params.json
data/: track-starter-slope.stl  track.stl
hardware/: README.md  STAGE2_SWITCH.md  V0_BENCH_RIG.md  coil-envelope.json  design-calcs.md
hardware/bom/: bom.csv  bom_rail_emit.csv  bom_rail_recv.csv
results/: checkpoint_comparison.json  coil_optimization_results.json  pinn_audit_report.md  pinn_validation_report.json  v7_optimization_diagnostic.json
scripts/: add_visuals.py  analytical_bfield.py  apply_physics.py  coil_optimizer_app.py  coil_optimizer_core.py  compose_scene.py  convert_stl_to_usd.py  create_marble.py  em_force_injection.py  evaluate_candidates.py  evaluate_pinn.py  generate_coil.py  generate_training_data.py  generate_training_data_designspace.py  generate_training_data_fieldaccuracy.py  optimize_coil_design.py  optimize_launch.py  physical_accuracy_audit.py  pinn_loader.py  remote_train.sh  rlc_circuit.py  run_physics_test.py  setup_launch_scene.py  simulation_loop.py  train_pinn.py  train_pinn_fieldaccuracy.py  v7_optimization_diagnostic.py  validate_kit_simulation.py  validate_physics.py  warp_bfield_solver.py  warp_em_kernel.py
tests/: conftest.py  test_coil_physics.py  test_pinn_loader.py  test_rlc_circuit.py
usd/: coil_geometry.usda  coil_properties.usda  marble_actor.usda  marble_coaster_scene.usda  marble_trajectory.usda  physics_config.usda  track_geometry.usda  visual_config.usda
(+108 files in other folders)
