[project]
name = "omnimarble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "nvidia-physicsnemo>=0.1.0",
    "numpy>=2.4.3",
    "rtree>=1.4.1",
    "scipy>=1.17.1",
    "torch>=2.6.0",
    "trimesh>=4.11.3",
    "usd-core>=26.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
